--- a/src/Cms/WebSiteBundle/Resources/config/routing/routing-initialisation.yml
+++ b/src/Cms/WebSiteBundle/Resources/config/routing/routing-initialisation.yml
@@ -1,16 +1,16 @@
 ini-settings:
-    pattern:  /ini
+    pattern:  /
     defaults: { _controller: CmsWebSiteBundle:Initialisation:initialisationDb }
 
 ini-settings-createDB:
-    pattern:  /ini/createDB
+    pattern:  /createDB
     defaults: { _controller: CmsWebSiteBundle:Initialisation:createDB }
 
 ini-settings-admin:
-    pattern:  /ini/admin
+    pattern:  /admin
     defaults: { _controller: CmsWebSiteBundle:Initialisation:initialisationAdmin }
 
 ini-cache:
-    pattern:  /ini/cacheClear
+    pattern:  /cacheClear
     defaults: { _controller: CmsWebSiteBundle:Initialisation:cacheClear }
 
