--- a/src/Cms/WebSiteBundle/Resources/config/routing/routing-uploads.yml
+++ b/src/Cms/WebSiteBundle/Resources/config/routing/routing-uploads.yml
@@ -1,15 +1,15 @@
 Uploads-uploadImage-wysiwyg:
-    path:    /Settings/Uploads/Images-wysiwyg
+    path:    /Images-wysiwyg
     defaults: { _controller: CmsWebSiteBundle:Uploads:imagesWysiwyg }
 
 Uploads-uploadImage:
-    path:    /Settings/Uploads/Images
+    path:    /Images
     defaults: { _controller: CmsWebSiteBundle:Uploads:images }
 
 Uploads-browseImage:
-    path:    /Settings/images
+    path:    /browse-images
     defaults: { _controller: CmsWebSiteBundle:Uploads:browseImages }
 
 Uploads-selectImage-wysiwyg:
-    path:    /Settings/Uploads/selectImage-wysiwyg
+    path:    /selectImage-wysiwyg
     defaults: { _controller: CmsWebSiteBundle:Uploads:selectImagesWysiwyg }
