--- a/src/Cms/WebSiteBundle/Resources/config/routing-webSite.yml
+++ b/src/Cms/WebSiteBundle/Resources/config/routing-webSite.yml
@@ -7,3 +7,5 @@ PageNoFound:
 Page:
     path:    /{path}
     defaults: { _controller: CmsWebSiteBundle:WebSite:page }
+    requirements:
+        path: ".+"
