--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -1,9 +1,8 @@
-# This file is auto-generated during the composer install
 parameters:
     database_driver: pdo_mysql
     database_host: localhost
     database_port: null
-    database_name: null
+    database_name: cms
     database_user: root
     database_password: null
     mailer_transport: smtp
@@ -11,6 +10,6 @@ parameters:
     mailer_user: null
     mailer_password: null
     locale: en
-    secret: 68c4e87211a9f3c32fabff1b111fe154
+    secret: 3c18a83c6680e779969317536cb8d893
     initialised: 'true'
     base-path: /cms
