--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -6,9 +6,10 @@ parameters:
     database_user: root
     database_password: null
     mailer_transport: smtp
-    mailer_host: 127.0.0.1
-    mailer_user: null
+    mailer_host:  smtp.gmail.com
+    mailer_user: youenn.pennarun
     mailer_password: null
+    initialised : 'true'
     locale: en
     secret: 3c18a83c6680e779969317536cb8d893
-    base-path: /
+    base-path: /cms
