--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -95,11 +95,11 @@ doctrine:
 
 # Swiftmailer Configuration
 swiftmailer:
-    transport: %mailer_transport%
-    host:      %mailer_host%
-    username:  %mailer_user%
+    transport: gmail
+    #host:      %mailer_host%
+    username:  youenn.pennarun@gmail.com
     password:  %mailer_password%
-    spool:     { type: memory }
+    #spool:     { type: memory }
 
 
 services:
