--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+*/logs/*
+*/cache/*
+web/uploads/*
+web/bundles/*
+
+# Configuration files
+app/config/parameters.ini
 app/config/parameters.yml
-app/cache/*
-app/logs/*
+
+# Composer
+composer.phar
