--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -9,7 +9,7 @@ parameters:
     mailer_host:  smtp.gmail.com
     mailer_user: user
     mailer_password: password
-    initialised : 'false'
+    initialised : 'true'
     locale: en
     secret: 3c18a83c6680e779969317536cb8d893
-    base-path: /
+    base-path: /cms
